# metrohash-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  metrohash.cpp  metrohash.pyx  pyproject.toml  setup.py  test.py  tox.ini
.github/workflows/: pythonpackage.yml
tests/: test_metrohash.py
